# GravitySimulator

./: .gitignore  .gitmodules  README.md  WORKSPACE
src/: BUILD  CMakeLists.txt  Camera.h  GravityGame.cpp  GravityGame.h  InputComponent.cpp  InputComponent.h  Intersect.cpp  Intersect.h  PhysicsComponent.cpp  PhysicsComponent.h  Ray.cpp  Ray.h  RenderComponent.cpp  RenderComponent.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Shape.h  SpaceObject.cpp  SpaceObject.h  Sphere.cpp  Sphere.h  Utility.h  Vector2D.h  Vector3d.cpp  Vector3d.h  amp_physics.h  main.cpp
src/shaders/: ambient_light.fs  ambient_light.vs  point_light.fs  point_light.vs
